--- a/Xandar/products/templates/products/product_list.html
+++ b/Xandar/products/templates/products/product_list.html
@@ -28,19 +28,19 @@
 <div class="row">
 <div class="col-xl-3 col-lg-4 col-md-5">
 <div class="sidebar-categories" style="padding-top: 30px">
-<div class="head">Browse Categories</div>
+<div class="head">Browse</div>
 <ul class="main-categories">
 <li class="main-nav-list"><a data-toggle="collapse" href="#fruitsVegetable" aria-expanded="false" aria-controls="fruitsVegetable"><span
-class="lnr lnr-arrow-right"></span>By Categories<span class="number">({{category|count_objs}})</span></a>
+        class="lnr lnr-arrow-right"></span><span id="category_value"></span><span class="number">({{sub_category|count_objs}})</span></a>
 <ul class="collapse" id="fruitsVegetable" data-toggle="collapse" aria-expanded="false" aria-controls="fruitsVegetable">
- {% for categories in category %}
-    {% with var_cat=categories %}
-    <li class="main-nav-list child"><a name={{var_cat}} href="/product/category={{categories}} ">{{categories}}<span class="number">({%count_category categories%})</span></a></li>
-    {% endwith %}
-    {% empty %}
-    <li class="main-nav-list child"><a href="#">No Categories<span class="number"></span></a></li>
 
+    {% if sub_category %}
+    {% for sub_categories in sub_category %}
+    <li class="main-nav-list child" onclick="call_url_general('sub','{{sub_categories}}')"><a id="call_sub_btn">{{sub_categories}}<span class="number">({% count_sub_category sub_categories %})</span></a></li>
+    {% empty %}
+    <li class="main-nav-list child"><a href="#">No Sub Category<span class="number"></span></a></li>
     {% endfor %}
+    {% endif %}
 </ul>
 </li>
     {% if not no_category %}
@@ -57,17 +57,16 @@ class="lnr lnr-arrow-right"></span>By Price<span class="number">({{product_count
 </li>
 </ul>
 </div>
+    {% if not no_category %}
 <div class="sidebar-filter mt-50">
 <div class="top-filter-head">Product Filters</div>
 <div class="common-filter">
 <div class="head">Brands</div>
 <form action="#">
 <ul>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="apple" name="brand"><label for="apple">Apple<span>(29)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="asus" name="brand"><label for="asus">Asus<span>(29)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="gionee" name="brand"><label for="gionee">Gionee<span>(19)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="micromax" name="brand"><label for="micromax">Micromax<span>(19)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="samsung" name="brand"><label for="samsung">Samsung<span>(19)</span></label></li>
+    {% for brand in brands %}
+        <li class="filter-list" onclick="call_url_general('brand','{{brand.value}}')"><input class="pixel-radio" type="button" id="{{brand.value}}" name="brand"><label for="{{brand.value}}">{{brand.value}}</label></li>
+    {% endfor %}
 </ul>
 </form>
 </div>
@@ -100,6 +99,7 @@ with red<span>(19)</span></label></li>
 </div>
 </div> -->
 </div>
+    {% endif %}
 </div>
 <div class="col-xl-9 col-lg-8 col-md-7">
 <!-- Start Filter Bar -->
@@ -131,6 +131,14 @@ with red<span>(19)</span></label></li>
 <!-- End Filter Bar -->
 <!-- Start Best Seller -->
 <section class="lattest-product-area pb-40 category-list">
+    <div class="row" style="margin-top:10px">
+        {% for tag in tags %}
+        <span class="btn btn-warning" style="color:white;margin-right:5px;width:100px;border-radius:6%">{{tag}}
+            <a href="" style="float:right;color:white" class="close-buttons" id="{{tag}}">X</a>
+        </span>
+        {% endfor %}
+
+    </div>
 <div class="row">
 
 
@@ -235,7 +243,77 @@ with red<span>(19)</span></label></li>
 <br>
 <br>
     </div>
+
+<script
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
 <script>
+    url = window.location.href.split("=")
+    category = url[1].split('&&')[0]
+    $('#category_value').text(category)
+</script>
+<script>
+$('#call_sub_btn').click(function(event){
+    event.preventDefault()
+})
+function call_url_general(tag, value)
+{
+    console.log(window.location.href)
+    count=0
+    new_url = ''
+    old_url = window.location.href.split('&&')
+    for(i=0;i<old_url.length;i++)
+    {
+        url_split = old_url[i].split('=')
+        if(url_split[0] == tag)
+           {
+            old_url[i] = tag+'='+value
+            new_url = old_url.join('&&')
+            count=1
+           }
+    }
+    if (count==1)
+    {
+        window.location.href=new_url
+    }
+    else
+    {
+        window.location.href = window.location.href+'&&'+tag+'='+value
+    }
+
+}
+
+function call_url_for_brand(brand_name)
+{
+    console.log(brand_name)
+}
+$('.close-buttons').click(function(event)
+{
+    result=[]
+    event.preventDefault()
+    filters = window.location.href.split('&&')
+    for (i=1;i<filters.length;i++)
+    {
+        filter_value = filters[i].split('=')[1]
+        if(filter_value == this.id)
+        {
+
+result = filters.filter(function(elem){
+   return elem != filters[i];
+});
+        }
+    }
+    new_url = result.join('&&')
+    window.location.href = new_url
+
+})
+
+function clear_filter(tag)
+{
+    console.log(tag)
+}
+
 function call_url(amount)
 {
     current_url = window.location.href.split("&&")[0]
