--- a/Xandar/products/templates/products/product_list.html
+++ b/Xandar/products/templates/products/product_list.html
@@ -1,14 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load arith_tags %}
-
 {% block content %}
-
-
-
-
 <!-- Start Banner Area -->
-
 <section class="banner-area organic-breadcrumb">
         <div class="container">
             <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
@@ -22,18 +16,15 @@
             </div>
         </div>
     </section>
-
-
 <div class="container">
 <div class="row">
 <div class="col-xl-3 col-lg-4 col-md-5">
 <div class="sidebar-categories" style="padding-top: 30px">
-<div class="head">Browse</div>
+<div class="head" style="line-height:45px">Browse</div>
 <ul class="main-categories">
 <li class="main-nav-list"><a data-toggle="collapse" href="#fruitsVegetable" aria-expanded="false" aria-controls="fruitsVegetable"><span
         class="lnr lnr-arrow-right"></span><span id="category_value"></span><span class="number">({{sub_category|count_objs}})</span></a>
 <ul class="collapse" id="fruitsVegetable" data-toggle="collapse" aria-expanded="false" aria-controls="fruitsVegetable">
-
     {% if sub_category %}
     {% for sub_categories in sub_category %}
     <li class="main-nav-list child" onclick="call_url_general('sub','{{sub_categories}}')"><a id="call_sub_btn">{{sub_categories}}<span class="number">({% count_sub_category sub_categories %})</span></a></li>
@@ -51,7 +42,6 @@ class="lnr lnr-arrow-right"></span>By Price<span class="number">({{product_count
 <li class="main-nav-list child"><a onclick="call_url(1000)">Price > 1000</a></li>
 <li class="main-nav-list child"><a onclick="call_url(2000)">1000 &lt Price < 2000</a></li>
 <li class="main-nav-list child"><a href="/product/filter/?pricegreat=2000">2000 > Price</a></li>
-
     {% endif %}
 </ul>
 </li>
@@ -59,13 +49,15 @@ class="lnr lnr-arrow-right"></span>By Price<span class="number">({{product_count
 </div>
     {% if not no_category %}
 <div class="sidebar-filter mt-50">
-<div class="top-filter-head">Product Filters</div>
+<div class="top-filter-head" style="line-height:45px">Product Filters</div>
 <div class="common-filter">
 <div class="head">Brands</div>
 <form action="#">
 <ul>
-    {% for brand in brands %}
-        <li class="filter-list" onclick="call_url_general('brand','{{brand.value}}')"><input class="pixel-radio" type="button" id="{{brand.value}}" name="brand"><label for="{{brand.value}}">{{brand.value}}</label></li>
+    {% for brand in attributes %}
+        <li class="filter-list" onclick="call_url_general('brand','{{brand}}')"><input class="pixel-radio" type="button" id="{{brand}}" name="brand"><label for="{{brand}}">{{brand}}</label></li>
+    {% empty %}
+            <li class="filter-list"><input class="pixel-radio" type="button" name="brand"><label for="">No Brands Available</label></li>
     {% endfor %}
 </ul>
 </form>
@@ -74,13 +66,17 @@ class="lnr lnr-arrow-right"></span>By Price<span class="number">({{product_count
 <div class="head">Color</div>
 <form action="#">
 <ul>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="black" name="color"><label for="black">Black<span>(29)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="balckleather" name="color"><label for="balckleather">Black
-Leather<span>(29)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="blackred" name="color"><label for="blackred">Black
-with red<span>(19)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="gold" name="color"><label for="gold">Gold<span>(19)</span></label></li>
-<li class="filter-list"><input class="pixel-radio" type="radio" id="spacegrey" name="color"><label for="spacegrey">Spacegrey<span>(19)</span></label></li>
+    {% for color in colors %}
+<li class="filter-list"><input class="pixel-radio" type="radio" id="{{color}}" name="color"><label for="{{color}}">{{color}}</label></li>
+<!--<li class="filter-list"><input class="pixel-radio" type="radio" id="balckleather" name="color"><label for="balckleather">Black-->
+<!--Leather<span>(29)</span></label></li>-->
+<!--<li class="filter-list"><input class="pixel-radio" type="radio" id="blackred" name="color"><label for="blackred">Black-->
+<!--with red<span>(19)</span></label></li>-->
+<!--<li class="filter-list"><input class="pixel-radio" type="radio" id="gold" name="color"><label for="gold">Gold<span>(19)</span></label></li>-->
+<!--<li class="filter-list"><input class="pixel-radio" type="radio" id="spacegrey" name="color"><label for="spacegrey">Spacegrey<span>(19)</span></label></li>-->
+    {% empty %}
+<li class="filter-list"><input class="pixel-radio" type="radio"  name="color"><label for="">No Color Available</label></li>
+    {% endfor %}
 </ul>
 </form>
 </div>
@@ -131,37 +127,36 @@ with red<span>(19)</span></label></li>
 <!-- End Filter Bar -->
 <!-- Start Best Seller -->
 <section class="lattest-product-area pb-40 category-list">
-    <div class="row" style="margin-top:10px">
+    {% if tags %}
+    <div class="row" style="margin-top:0px;padding-top:30px;padding-left:15px">
         {% for tag in tags %}
-        <span class="btn btn-warning" style="color:white;margin-right:5px;width:100px;border-radius:6%">{{tag}}
+        <span class="btn" style="color:white;margin-right:5px;width:100px;border-radius:6%;background:#828bb3;">{{tag}}
             <a href="" style="float:right;color:white" class="close-buttons" id="{{tag}}">X</a>
         </span>
         {% endfor %}
-
+        <span class="btn" style="color:white;margin-right:5px;width:100px;border-radius:6%;background:#828bb3;">
+    <a href="" style="color:white" id="clear-all-btn">Clear All</a>
+</span>
     </div>
+    {% else %}
+    <div class="row" style="margin-top:0px">
+    </div>
+    {% endif %}
 <div class="row">
-
-
-
 <!-- single product -->
-
 {% for product in object_list %}
-
-
 <div class="col-lg-4 col-md-6">
 <div class="single-product">
 <a href="{% url 'products:product_detail' product.slug %}">
 <img class="img-fluid" src="{{ product.image.url }}" alt="" style="width: 255px; height: 255px">
 </a>
 <div class="product-details">
-
 <h6>{{ product.name }}</h6>
 <div class="price">
 <h6>&#x20B9; {{ product.price }}</h6>
 <h6 class="l-through">&#x20B9; 8999</h6>
 </div>
 <div class="prd-bottom">
-
 <a class="social-info" onclick="add_cart({{product.id}})">
 <span class="ti-bag"></span>
 <p class="hover-text">add to bag</p>
@@ -170,7 +165,6 @@ with red<span>(19)</span></label></li>
 <span class="lnr lnr-heart"></span>
 <p class="hover-text">Wishlist</p>
 </a>
-
 <a href="{% url 'products:product_detail' product.slug %}" class="social-info">
 <span class="lnr lnr-move"></span>
 <p class="hover-text">view more</p>
@@ -180,23 +174,19 @@ with red<span>(19)</span></label></li>
 </div>
 </div>
 {% endfor %}
-
     {% for product in filtered_item %}
-
     <div class="col-lg-4 col-md-6">
 <div class="single-product">
 <a href="{% url 'products:product_detail' product.slug %}">
 <img class="img-fluid" src="{{ product.productimage_set.all.0.image.url }}" alt="" style="width: 255px; height: 255px">
 </a>
 <div class="product-details">
-
 <h6>{{ product.name }}</h6>
 <div class="price">
 <h6>&#x20B9; {{ product.price }}</h6>
 <h6 class="l-through">&#x20B9; 8999</h6>
 </div>
 <div class="prd-bottom">
-
 <a class="social-info" onclick="add_cart({{product.id}})">
 <span class="ti-bag"></span>
 <p class="hover-text">add to bag</p>
@@ -205,7 +195,6 @@ with red<span>(19)</span></label></li>
 <span class="lnr lnr-heart"></span>
 <p class="hover-text">Wishlist</p>
 </a>
-
 <a href="{% url 'products:product_detail' product.slug %}" class="social-info">
 <span class="lnr lnr-move"></span>
 <p class="hover-text">view more</p>
@@ -214,46 +203,41 @@ with red<span>(19)</span></label></li>
 </div>
 </div>
 </div>
-
     {% empty %}
-
     {% if messages %}
     {% for msg in messages %}
     <h1><div class="alert">{{msg}}</div></h1>
     {% endfor %}
     {% endif %}
-
     {% endfor %}
-
-
-
-
 </div>
 </section>
 <!-- End Best Seller -->
 <!-- Start Filter Bar -->
 {% include 'paginate.html' %}
 <!-- End Filter Bar -->
-
-
-
 </div>
 </div>
 </div>
 <br>
 <br>
     </div>
-
 <script
-			  src="https://code.jquery.com/jquery-3.4.1.min.js"
-			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			  crossorigin="anonymous"></script>
+           src="https://code.jquery.com/jquery-3.4.1.min.js"
+           integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+           crossorigin="anonymous"></script>
 <script>
     url = window.location.href.split("=")
     category = url[1].split('&&')[0]
     $('#category_value').text(category)
 </script>
 <script>
+$('#clear-all-btn').click(function(event){
+event.preventDefault()
+    old_url = window.location.href.split('&&')[0]
+    window.location.href = old_url
+})
+
 $('#call_sub_btn').click(function(event){
     event.preventDefault()
 })
@@ -281,9 +265,7 @@ function call_url_general(tag, value)
     {
         window.location.href = window.location.href+'&&'+tag+'='+value
     }
-
 }
-
 function call_url_for_brand(brand_name)
 {
     console.log(brand_name)
@@ -298,7 +280,6 @@ $('.close-buttons').click(function(event)
         filter_value = filters[i].split('=')[1]
         if(filter_value == this.id)
         {
-
 result = filters.filter(function(elem){
    return elem != filters[i];
 });
@@ -306,14 +287,11 @@ result = filters.filter(function(elem){
     }
     new_url = result.join('&&')
     window.location.href = new_url
-
 })
-
 function clear_filter(tag)
 {
     console.log(tag)
 }
-
 function call_url(amount)
 {
     current_url = window.location.href.split("&&")[0]
@@ -339,12 +317,10 @@ else
 {
     $('#response_image').attr('src',"{% static '/img/false.gif'%}")
 }
-
 $('#myModal').fadeIn('slow')
 $("#myModal").delay(1500).fadeOut('slow', function()
 {
 $('#total-screen').css('opacity',1)
-
 })
 },
 error: function(error) {
@@ -360,7 +336,6 @@ url: '/operations/cart/add/'+object_id+'/',
 data: {},
 type: 'GET',
 success: function(response) {
-
 $('#total-screen').css('opacity',0.2)
 $('#response_message').text(response)
 if(response == 'Item Added To Cart Successfully')
@@ -372,7 +347,6 @@ else
 {
     $('#response_image').attr('src',"{% static '/img/false.gif'%}")
 }
-
 $('#myModal').fadeIn('slow')
 $("#myModal").delay(1500).fadeOut('slow', function()
 {
@@ -384,14 +358,10 @@ console.log(error)
 }
 });
 }
-
-
-
 </script>
-
-
 {% endblock content %}
-
-
-
-
+{% block scroll_js %}
+<script type="text/javascript">
+    $("html,body").scrollTop(320);
+</script>
+{% endblock scroll_js %}
