--- a/Xandar/templates/partials/category_bar.html
+++ b/Xandar/templates/partials/category_bar.html
@@ -2,157 +2,62 @@
 <ul class="nav navbar-nav menu_nav ml-auto">
 
 
+
+{% for object in product_categories %}
+
  <li class="nav-item submenu dropdown">
-              <a class="nav-link" href="{% url 'product_list' %}?product_category=men">Men</a>
+              <a class="nav-link" href="{% url 'product_list' %}?product_category=men">{{ object.category }}</a>
+
+
+
 
               <ul class="dropdown-menu">
 <div class="row" style="width:400px;">
                 <div class="column" style="width:200px;">
                      <li class="nav-item" style="width: 185px; margin-left: 15px">
 
-                    <a class="nav-link" style="font-weight: bold;" >Clothing</a>
+                    <a class="nav-link" style="font-weight: bold;">Hot Deals</a>
 
                   </li>
-                     <li class="nav-item" style="width: 185px; margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?product_category=Men">T-shirts</a>
-              </li>
+
+              {% for product in featured_products %}
+              {% if product.category.category == object.category %}
               <li class="nav-item" style="width: 185px; margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?product_category=Men">Jeans</a>
+              <a class="nav-link" href="?product_category={{ object.category }}">{{ product.name }}</a>
               </li>
-              <li class="nav-item" style="width: 185px; margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?product_category=Men">Kurtis</a>
-              </li>
+              {% endif %}
+             {% endfor %}
+
+
                   </div>
+
+                 
 
                   <div class="column" style="width:200px;"  >
                   <li class="nav-item" style="width: 185px">
 
-                    <a class="nav-link" style="font-weight: bold;" >Accessories</a>
+                    <a class="nav-link" style="font-weight: bold;">All Categories</a>
                   </li>
+
+                {% for obj in product_subcategories %}
+                {% if obj.category.category == object.category %}
                      <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Glasses&&gender=female">Glasses</a>
+              <a class="nav-link" href="/product/category={{ object.category }}&&sub={{ obj.sub_category }}">{{ obj.sub_category }}</a>
               </li>
-              <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Shoes&&gender=female">Shoes</a>
-              </li>
-              <li class="nav-item" style="width: 185px">
-                <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Watches&&gender=female">Watches</a>
-              </li>
-              <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Belts&&gender=female">Belts</a>
-              </li>
+              {% endif %}
+              {% endfor %}
                   </div>
+
+
+
+
                 </div>
             </ul>
             </li>
 
 
-<li class="nav-item submenu dropdown">
-              <a class="nav-link" href="{% url 'product_list' %}?product_category=women">Women </a>
 
-              <ul class="dropdown-menu">
-<div class="row" style="width:400px;">
-
-
-                <div class="column" style="width:200px;">
-                     <li class="nav-item" style="width: 185px; margin-left: 15px">
-
-                    <a class="nav-link" style="font-weight: bold;" >Clothing</a>
-
-                  </li>
-                     <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Clothing&&sub_category=T-shirts&&gender=female">T-shirts</a>
-              </li>
-              <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Clothing&&sub_category=T-shirts&&gender=female">Jeans</a>
-              </li>
-              <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Clothing&&sub_category=T-shirts&&gender=female">Kurtis</a>
-              </li>
-                  </div>
-                  <div class="column" style="width:200px;">
-                     <li class="nav-item" style="width: 185px;">
-
-                    <a class="nav-link" style="font-weight: bold;" >Accessories</a>
-
-                  </li>
-                     <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Glasses&&gender=female">Glasses</a>
-              </li>
-              <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Shoes&&gender=female">Shoes</a>
-              </li>
-              <li class="nav-item" style="width: 185px">
-                <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Watches&&gender=female">Watches</a>
-              </li>
-              <li class="nav-item" style="width: 185px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Lifestyle&&sub_category=Belts&&gender=female">Belts</a>
-              </li>
-                  </div>
-
-                  </div>
-            </ul>
-            </li>
-
-
-
-
-            <li class="nav-item submenu dropdown">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">Electronics </a>
-
-              <ul class="dropdown-menu">
-<div class="row" style="width:600px;">
-
-                <div class="column" style="width:200px;">
-                     <li class="nav-item" style="width: 185px; margin-left: 15px">
-
-                    <a class="nav-link" style="font-weight: bold;" >Phone</a>
-
-                  </li>
-                     <li class="nav-item" style="width: 185px; margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">iPhone</a>
-              </li>
-              <li class="nav-item" style="width: 185px; margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">Samsung</a>
-              </li>
-              <li class="nav-item" style="width: 185px; margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">MI</a>
-              </li>
-                  </div>
-
-                  <div class="column" style="width:200px;">
-                  <li class="nav-item" style="width: 185px  margin-left: 15px">
-
-                    <a class="nav-link" style="font-weight: bold;" >TV</a>
-                  </li>
-                      <li class="nav-item" style="width: 185px;  margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">Samsung</a>
-              </li>
-              <li class="nav-item" style="width: 185px;  margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">Sony</a>
-              </li>
-              <li class="nav-item" style="width: 185px;  margin-left: 15px">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">LG</a>
-              </li>
-                  </div>
-
-                       <div class="column" style="width:200px;">
-                  <li class="nav-item" style="width: 185px; ">
-
-                    <a class="nav-link" style="font-weight: bold;" >Accessories</a>
-                  </li>
-                      <li class="nav-item" style="width: 185px; ">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">Headphones</a>
-              </li>
-              <li class="nav-item" style="width: 185px; ">
-              <a class="nav-link" href="{% url 'product_list' %}?category=Electronics">Cases & Covers</a>
-              </li>
-
-                  </div>
-                  </div>
-            </ul>
-            </li>
-
+{% endfor %}
 
 
 
