--- a/Xandar/products/templates/products/product_list.html
+++ b/Xandar/products/templates/products/product_list.html
@@ -148,7 +148,13 @@ class="lnr lnr-arrow-right"></span>By Price<span class="number">({{product_count
 <div class="col-lg-4 col-md-6">
 <div class="single-product">
 <a href="{% url 'products:product_detail' product.slug %}">
-<img class="img-fluid" src="{{ product.image.url }}" alt="" style="width: 255px; height: 255px">
+<img class="img-fluid" src="{{ product.image.url }}" alt="" style="position: relative;
+                                                                   width: 400px;
+                                                                   height: 200px;
+                                                                   background-position: 50% 50%;
+                                                                   background-repeat: no-repeat;
+                                                                   background-size: cover;
+                                                                   object-fit: contain;">
 </a>
 <div class="product-details">
 <h6>{{ product.name }}</h6>
