--- a/Xandar/templates/partials/category_bar.html
+++ b/Xandar/templates/partials/category_bar.html
@@ -6,7 +6,7 @@
 {% for object in product_categories %}
 
  <li class="nav-item submenu dropdown">
-              <a class="nav-link" href="{% url 'product_list' %}?product_category=men">{{ object.category }}</a>
+              <a class="nav-link">{{ object.category }}</a>
 
 
 
@@ -23,7 +23,7 @@
               {% for product in featured_products %}
               {% if product.category.category == object.category %}
               <li class="nav-item" style="width: 185px; margin-left: 15px">
-              <a class="nav-link" href="?product_category={{ object.category }}">{{ product.name }}</a>
+              <a class="nav-link" href="{% url 'products:product_detail' product.slug %}">{{product.name|truncatechars:18}}</a>
               </li>
               {% endif %}
              {% endfor %}
