fixing navbar and model

--- a/Xandar/accounts/templates/accounts/password_reset.html
+++ b/Xandar/accounts/templates/accounts/password_reset.html
@@ -43,7 +43,7 @@
 
  <p><h3>Email Confirmed. Click to reset password now.</h3></p>
         <div class="form-group">
-            <button class="btn btn-success  hover" type="submit">
+            <button class="primary-btn  hover" type="submit">
             Request Password Reset </button>
         </div>
     
