--- a/Xandar/accounts/templates/accounts/reset_password.html
+++ b/Xandar/accounts/templates/accounts/reset_password.html
@@ -62,18 +62,18 @@
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
                     <div class="login_form_inner">
-                    	<p class="text-center"> <strong>Use the form below to change your password. <br> Your password cannot be the same as your username.</strong></p>
+                      <p class="text-center" style="color: #fd7e14;"> <strong>Use the form below to change your password. <br> Your password cannot be the same as your username.</strong></p>
   {% include 'accounts/messages.html' %}
 
 <form method="POST" action="{% url 'accounts:reset_password' %}" style="margin: 0 auto; width:250px;">
-	
-	{% csrf_token %}
-	<div class="form-group">
-	<label for="old_password">Old Password</label>
-	<input type="password" class="form-control" name="old_password">
-<br>	
-	<label for="new_password">New Password</label>
-	<input type="password" id="txtPassword" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" class="form-control" name="password1" required>
+  
+  {% csrf_token %}
+  <div class="form-group">
+  <label for="old_password">Old Password</label>
+  <input type="password" class="form-control" name="old_password">
+<br>  
+  <label for="new_password">New Password</label>
+  <input type="password" id="txtPassword" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" class="form-control" name="password1" required>
 
 
 <div id="messages" align="left">
@@ -86,10 +86,10 @@
 
 
 <br>
-	<label for="new_password">Comfirm Password</label>
-	<input type="password" class="form-control" name="password2">
+  <label for="new_password">Comfirm Password</label>
+  <input type="password" class="form-control" name="password2">
 <br>
-	<button class="btn btn-primary" type="submit">Change Password</button>
+  <button class="primary-btn" type="submit">Change Password</button>
 
 </form>
 </div>
