--- a/Xandar/templates/partials/navbar.html
+++ b/Xandar/templates/partials/navbar.html
@@ -18,13 +18,17 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
 <!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 <ul class="nav navbar-nav menu_nav ml-auto">
-<li class="nav-item active"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
+<li class="nav-item 
+{% if '/' == request.path%}
+active
+{% endif %}
+"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
 
 
 
 {% if user.is_authenticated %}
 
-<li class="nav-item submenu dropdown active">
+<li class="nav-item submenu dropdown">
 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 aria-expanded="false">{{user.first_name }}</a>
 <ul class="dropdown-menu">
