--- a/Xandar/products/templates/products/product_list.html
+++ b/Xandar/products/templates/products/product_list.html
@@ -23,14 +23,19 @@
 <div class="head" style="line-height:45px">Browse</div>
 <ul class="main-categories">
 <li class="main-nav-list"><a data-toggle="collapse" href="#fruitsVegetable" aria-expanded="false" aria-controls="fruitsVegetable"><span
-        class="lnr lnr-arrow-right"></span><span id="category_value"></span><span class="number">({{sub_category|count_objs}})</span></a>
+        class="lnr lnr-arrow-right"></span><span id="category_value"></span><span class="number"></span></a>
 <ul class="collapse" id="fruitsVegetable" data-toggle="collapse" aria-expanded="false" aria-controls="fruitsVegetable">
     {% if sub_category %}
     {% for sub_categories in sub_category %}
-    <li class="main-nav-list child" onclick="call_url_general('sub','{{sub_categories}}')"><a id="call_sub_btn">{{sub_categories}}<span class="number">({% count_sub_category sub_categories %})</span></a></li>
-    {% empty %}
-    <li class="main-nav-list child"><a href="#">No Sub Category<span class="number"></span></a></li>
+    <li class="main-nav-list child" onclick="call_url_general('sub','{{sub_categories}}')"><a id="call_sub_btn">{{sub_categories}}</a></li>
     {% endfor %}
+    {% elif sub_category_all%}
+    {% for sub_categories in sub_category_all %}
+        <li class="main-nav-list child"><a href="/product/category={{sub_categories}}">{{sub_categories}}</a></li>
+    {% endfor %}
+    {% else %}
+        <li class="main-nav-list child"><a href="#">No SubCategories Found</a></li>
+
     {% endif %}
 </ul>
 </li>
